Distance must keep below altitude or fail.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -323,35 +323,35 @@ CONTRACT_TYPE
 	}
 
 //Contract Goals
+	PARAMETER
+	{
+		name = VesselParameterGroup
+		type = VesselParameterGroup
+		title = always flying at an @/PrettyAltRange
+
+		vessel = @/craft
+
 		PARAMETER
 		{
-			name = VesselParameterGroup
-			type = VesselParameterGroup
-			title = fly at an @/PrettyAltRange
-	
-			vessel = @/craft
-	
-			PARAMETER
-			{
-				name = ReachState
-				type = ReachState
-	
-				targetBody = HomeWorld()
-				situation = FLYING
-				maxAltitude = @/AltMax
-	
-				disableOnStateChange = false
-				hideChildren = true
-				hidden = true
-	
-			}
-	
-			completeInSequence = false
+			name = ReachState
+			type = ReachState
+
+			targetBody = HomeWorld()
+			situation = FLYING
+			maxAltitude = @/AltMax
+
 			disableOnStateChange = false
 			hideChildren = true
-	
+			hidden = true
+
 		}
-	
+
+		completeInSequence = false
+		disableOnStateChange = false
+		hideChildren = true
+
+	}
+
 	PARAMETER
 	{
 		name = VesselParameterGroup
