--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -39,9 +39,9 @@ Localization
 
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_006_ShortHop_title = Travel @/PrettyDistanceRange.
-		#autoLOC_KPlanes_Start_006_ShortHop_description = Now you can fly high and fast, perhaps we should see how far you can go, and of course come back again safely. Travel to the half-way distance marker at @/PrettyMarkerDistance and return back to the KSC.
-		#autoLOC_KPlanes_Start_006_ShortHop_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely.
-		#autoLOC_KPlanes_Start_006_ShortHop_notes = You might want to check your fuel guages first.
+		#autoLOC_KPlanes_Start_006_ShortHop_description = Now you can fly high and fast, perhaps we should see how far you can go, and of course come back again safely. Travel to the half-way distance marker at @/PrettyMarkerDistance and return back to the KSC, while keeping an @/PrettyAltRange.
+		#autoLOC_KPlanes_Start_006_ShortHop_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely. Make sure to keep an @/PrettyAltRange.
+		#autoLOC_KPlanes_Start_006_ShortHop_notes = You might want to check your fuel guages first. Do not go too high.
 		#autoLOC_KPlanes_Start_006_ShortHop_completedMessage = Wow, we did not know people wanted to travel so far from home. Perhaps we can make money from taking people to other places?
 
 		// --------------------------------------------------------------------------------
@@ -55,7 +55,7 @@ Localization
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_008_DomesticDistance_title = Travel @/PrettyDistanceRange
 		#autoLOC_KPlanes_Start_008_DomesticDistance_description = Passengers want to go further, perhaps to the sea side or some other city. Travel to the half-way distance marker at @/PrettyMarkerDistance and return to the KSC.
-		#autoLOC_KPlanes_Start_008_DomesticDistance_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_008_DomesticDistance_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely. Make sure to keep an @/PrettyAltRange.
 		#autoLOC_KPlanes_Start_008_DomesticDistance_notes = You're gonna need a bigger plane (and fuel tanks).
 		#autoLOC_KPlanes_Start_008_DomesticDistance_completedMessage = Phew, that was a long way. Next time pack some entertainment, or perhaps look into autopilots.
 
@@ -69,7 +69,7 @@ Localization
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_010_ContinentalDistance_title = Long haul flights of @/PrettyDistanceRange
 		#autoLOC_KPlanes_Start_010_ContinentalDistance_description = Travelling across continents might be useful for flying back our intrepid astronauts, or for business people who simply have to be there. Travel to the half-way distance marker at @/PrettyMarkerDistance and return to the KSC.
-		#autoLOC_KPlanes_Start_010_ContinentalDistance_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_010_ContinentalDistance_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely. Make sure to keep an @/PrettyAltRange.
 		#autoLOC_KPlanes_Start_010_ContinentalDistance_notes = Fuel in wings? Fuel under wings? Drop fuel from wings? So much fuel!
 		#autoLOC_KPlanes_Start_010_ContinentalDistance_completedMessage = So far! Definitely need to invest in in-flight entertainment systems.
 
@@ -83,14 +83,14 @@ Localization
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_title = Extreme long distance flights of @/PrettyDistanceRange
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_description = Holiday seem popular, but for some reason they are more appealing if they are on a different continent. The only problem is that these are quite far away. Having enough fuel and patience to last the distance will be challenge. Travel to the half-way distance marker at @/PrettyMarkerDistance and return to the KSC.
-		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely.
+		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_synopsis = Travel to half-way distance marker at @/PrettyMarkerDistance, then land back at KSC safely. Make sure to keep an @/PrettyAltRange.
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_notes = Your plane may well be made entirely of fuel tanks. Bigger wings, bigger engines, bigger landing legs, bigger budgets.
 		#autoLOC_KPlanes_Start_012_IntercontinentalDistance_completedMessage = So the other continents look much like this one, but are warmer or colder. Not sure flying so far is good for Kerbals.
 
 		// ================================================================================
 		#autoLOC_KPlanes_Early_001_StratosphereLow_title = Fly an airplane to @/PrettyAltMin@/DescAltMin.
 		#autoLOC_KPlanes_Early_001_StratosphereLow_description = Inigma Kerman wants you to design and fly an aircraft capable of operating at an @/PrettyAltRange. He says that such an accomplishment will make future air travel safer since most of the serious weather only happens below this altitude. He says that if pilots could simply fly over bad weather rather than through it, it would unlock a large number of regional and possibly global air travel possibilities.
-		#autoLOC_KPlanes_Early_001_StratosphereLow_synopsis = Simply launch an airplane from the runway, fly up to an @/PrettyAltRange, then land back at KSC safely.
+		#autoLOC_KPlanes_Early_001_StratosphereLow_synopsis = Simply launch an airplane from the runway, fly up to an @/PrettyAltRange, then land back at KSC safely. Make sure to keep an @/PrettyAltRange.
 		#autoLOC_KPlanes_Early_001_StratosphereLow_notes = Enjoy the view, as at this altitude the clouds (if any are seen today) will mostly be below your aircraft!
 		#autoLOC_KPlanes_Early_001_StratosphereLow_completedMessage = You did it! An @/PrettyAltRange reached, and your pilot snapped a great picture!\n\nWhile your pilot rests up at the Astronaut Complex, be sure to check in with Gene at Mission Control for another opportunity if interested.
 
@@ -146,14 +146,14 @@ Localization
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Early_009_AroundThePoles_title = Fly to the North Pole then to the South Pole.
 		#autoLOC_KPlanes_Early_009_AroundThePoles_description = Jebediah Kerman enjoyed the North Pole so much, he thinks we should do both the North and South Pole in one trip. Madness. The engineers have no idea where to put all the fuel, let alone snacks for such a long journey. Refueling a long the way would make sense, if that is possible.
-		#autoLOC_KPlanes_Early_009_AroundThePoles_synopsis = Follow the helpful Markers 1 through 3 in order.
+		#autoLOC_KPlanes_Early_009_AroundThePoles_synopsis = Follow the helpful Markers 1 through 3 in order. Make sure to keep an @/PrettyAltRange.
 		#autoLOC_KPlanes_Early_009_AroundThePoles_notes = No idea where all the fuel needed will come from.
 		#autoLOC_KPlanes_Early_009_AroundThePoles_completedMessage = Going around the world was quite boring. Possibly taking in-flight enterainment will help next time? Either that or go to sleep... so long as you remember to turn on the autopilot.
 		
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Early_010_AroundTheWorld_title = Fly around the world!
 		#autoLOC_KPlanes_Early_010_AroundTheWorld_description = Our engineers think that going around the world in an airplane will be the pinnacle of long distance travel, and will generate such amazing publicity that we will never run out of funds ever again. However Gene Kerman thinks that going all that distance just to come back again is pretty silly. Whatever pays the bills though.
-		#autoLOC_KPlanes_Early_010_AroundTheWorld_synopsis = Follow the helpful Markers 1 through 3 in order.
+		#autoLOC_KPlanes_Early_010_AroundTheWorld_synopsis = Follow the helpful Markers 1 through 3 in order. Make sure to keep an @/PrettyAltRange.
 		#autoLOC_KPlanes_Early_010_AroundTheWorld_notes = No idea where all the fuel needed will come from.
 		#autoLOC_KPlanes_Early_010_AroundTheWorld_completedMessage = Going around the world was quite boring. Possibly having decent in-flight catering and very comfortable beds will help next time? Either that or watch lots of movies.
 		
