Better altitude limit text. Actually fail distance contract above alt.

--- a/GameData/ContractPacks/KPlanes/Groups/Early/007-MesosphereLow.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/007-MesosphereLow.cfg
@@ -57,7 +57,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltRange = altitude of at least @/PrettyAltMin@/DescAltMin
+		PrettyAltRange = altitude above @/PrettyAltMin@/DescAltMin
 		title = Range for altitude 
 	}
 
