--- a/GameData/ContractPacks/KPlanes/Groups/Start/008-DomesticDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/008-DomesticDistance.cfg
@@ -57,7 +57,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltRange = altitude of at most @/PrettyAltMax@/DescAltMax
+		PrettyAltRange = altitude below @/PrettyAltMax@/DescAltMax
 		title = Range for altitude 
 	}
 
@@ -330,6 +330,7 @@ CONTRACT_TYPE
 			situation = FLYING
 			maxAltitude = @/AltMax
 
+			failWhenUnmet = true
 			disableOnStateChange = false
 			hideChildren = true
 			hidden = true
