--- a/GameData/ContractPacks/KPlanes/Groups/Early/001-StratosphereLow.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/001-StratosphereLow.cfg
@@ -59,7 +59,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltRange = altitude of at least @/PrettyAltMin@/DescAltMin
+		PrettyAltRange = altitude above @/PrettyAltMin@/DescAltMin
 		title = Range for altitude 
 	}
 
