--- a/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
@@ -59,7 +59,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltRange = altitude of at most @/PrettyAltMax@/DescAltMax
+		PrettyAltRange = altitude below @/PrettyAltMax@/DescAltMax
 		title = Range for altitude 
 	}
 
