--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -67,7 +67,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltRange = altitude of at most @/PrettyAltMax@/DescAltMax
+		PrettyAltRange = altitude below @/PrettyAltMax@/DescAltMax
 		title = Range for altitude 
 	}
 
@@ -340,6 +340,7 @@ CONTRACT_TYPE
 			situation = FLYING
 			maxAltitude = @/AltMax
 
+			failWhenUnmet = true
 			disableOnStateChange = false
 			hideChildren = true
 			hidden = true
