Do not fail distance if landed, etc.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/006-ShortHop.cfg
@@ -327,7 +327,7 @@ CONTRACT_TYPE
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = always flying at an @/PrettyAltRange
+		title = if flying, then at an @/PrettyAltRange
 
 		vessel = @/craft
 
@@ -338,6 +338,10 @@ CONTRACT_TYPE
 
 			targetBody = HomeWorld()
 			situation = FLYING
+			situation = LANDED
+			situation = PRELAUNCH
+			situation = SPLASHED
+			situation = SUB_ORBITAL
 			maxAltitude = @/AltMax
 
 			failWhenUnmet = true
