--- a/GameData/ContractPacks/KPlanes/Groups/Early/009-AroundThePoles.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Early/009-AroundThePoles.cfg
@@ -326,7 +326,7 @@ CONTRACT_TYPE
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = always flying at an @/PrettyAltRange
+		title = if flying, then at an @/PrettyAltRange
 
 		vessel = @/craft
 
@@ -337,6 +337,10 @@ CONTRACT_TYPE
 
 			targetBody = HomeWorld()
 			situation = FLYING
+			situation = LANDED
+			situation = PRELAUNCH
+			situation = SPLASHED
+			situation = SUB_ORBITAL
 			maxAltitude = @/AltMax
 
 			failWhenUnmet = true
