--- a/GameData/ContractPacks/KPlanes/Groups/Start/012-IntercontinentalDistance.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/012-IntercontinentalDistance.cfg
@@ -317,7 +317,7 @@ CONTRACT_TYPE
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = always flying at an @/PrettyAltRange
+		title = if flying, then at an @/PrettyAltRange
 
 		vessel = @/craft
 
@@ -328,6 +328,10 @@ CONTRACT_TYPE
 
 			targetBody = HomeWorld()
 			situation = FLYING
+			situation = LANDED
+			situation = PRELAUNCH
+			situation = SPLASHED
+			situation = SUB_ORBITAL
 			maxAltitude = @/AltMax
 
 			failWhenUnmet = true
