Add some modern contracts that are easy.

--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -160,7 +160,7 @@ Localization
 		// --------------------------------------------------------------------------------
 		#autoLOC_KPlanes_Early_011_MesosphereHigh_title = Fly an airplane to @/PrettyAltMin@/DescAltMin.
 		#autoLOC_KPlanes_Early_011_MesosphereHigh_description = The Kerbal Space Program wants us to be the first to develop a spaceplane for use in its space program. Inigma Kerman already had you on speed dial, and is currently asking your organization to lead this cutting edge effort.\n\nInigma says that you will need to develop a spaceplane - one that will be able to fly to the highest reaches of the atmosphere, and land on the ground safely. It's not that hard to say that an @/PrettyAltRange is a mere skip away from space. He says the Kerbal Space Program has already given authorization to make this a suborbital flight if desired - assuming you can engineer your spaceplane to do so, but it's not required to complete the mission.
-		#autoLOC_KPlanes_Early_011_MesosphereHigh_synopsis = Simply launch a spaceplane from the runway and fly to an @/PrettyAltRange and then land your spaceplane anywhere on the ground safely. You may use an air-breathing engine, or liquid fueled engine, or both.
+		#autoLOC_KPlanes_Early_011_MesosphereHigh_synopsis = Launch a plane from the runway and fly to an @/PrettyAltRange and then land your spaceplane anywhere on the ground safely. You may use an air-breathing engine, or liquid fueled engine, or both.
 		#autoLOC_KPlanes_Early_011_MesosphereHigh_notes = High above the ground, where space meets the air, and the stars beckon, will you realize that the universe is at your fingertips. That is, if Kerbals even have fingers other than their thumbs.
 		#autoLOC_KPlanes_Early_011_MesosphereHigh_completedMessage = Your spaceplane mission was a success! Mission Control erupted in celebration when you flew at @/PrettyAltMin, and again when you landed. There are compliments all around, and your organization has been honored with a fairly large reward.
 
@@ -170,5 +170,40 @@ Localization
 		#autoLOC_KPlanes_Early_012_Mach4_synopsis = Launch an airplane from the runway, fly at an @/PrettyAltRange, exceed @/PrettySpeed in level flight for 5 seconds, and then land and stop anywhere safely.
 		#autoLOC_KPlanes_Early_012_Mach4_notes = Four times the speed of sound doesn't sound...er seem that much more than three times the speed of sound. That is, unless you're a meteor, which at some point in this mission someone on the ground might mistake you for one. Good luck!
 		#autoLOC_KPlanes_Early_012_Mach4_completedMessage = Congratulations! You have achieved Mach 4!\n\nGene says the Kerbal Space Program and its affiliates are serious about reaching space via a spaceplane, and will look to your organization to make it happen soon.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Modern_001_ThermosphereLow_title = Fly a high-altitude research plane high to @/PrettyAltMin@/DescAltMin.
+		#autoLOC_KPlanes_Modern_001_ThermosphereLow_description = Stratospheric is so old school for planes, Gene Kerman wants us to checkout the more cooler sounding Thermosphere. Be careful not to fly so high and so fast that you skip off the atmosphere and end up in space. Not sure if you'd be able to get back in one piece from that sticky situation. Neil Karmstrong said he could do it, but he's busy on another project.
+		#autoLOC_KPlanes_Modern_001_ThermosphereLow_synopsis = Take off in a plane from the runway, reach to an @/PrettyAltRange, then land and stop anywhere safely.
+		#autoLOC_KPlanes_Modern_001_ThermosphereLow_notes =  There is not much oxygen for engines or wings, so large intakes and large wings and tails will be needed to get to such dizzying heights.
+		#autoLOC_KPlanes_Modern_001_ThermosphereLow_completedMessage = Amazing work!\n\nGlad to see you survived with the oxygen breathing apparatus. Seems like from that high up we could take some very good photos of our competitors research sites, for inspiration purposes of course.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Modern_002_SubOrbital_title = First space plane! Get a plane to space, at @/PrettyAltMin@/DescAltMin.
+		#autoLOC_KPlanes_Modern_002_SubOrbital_description = Our last plane got so high that it does not seem to much further to get into space.
+		#autoLOC_KPlanes_Modern_002_SubOrbital_synopsis = Launch a plane that can reach space at @/PrettyAltRange, then land and stop anywhere safely.
+		#autoLOC_KPlanes_Modern_002_SubOrbital_notes = Returning back might be tricky, so consider using high grade parts that can survive being cooked to high temperatures. You might also want to install some sort of ejection capsule and extra parachutes.
+		#autoLOC_KPlanes_Modern_002_SubOrbital_completedMessage = Historic achievement! Though actually plenty have reached space in rockets, nobody has done it with wings. We might be able to use this to bring more bits of rocket back from space and save some money. Our sponsors can then buy more snacks and everybody will be a winner.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Modern_003_Mach5_title = Achieve an airspeed of @/PrettySpeed.
+		#autoLOC_KPlanes_Modern_003_Mach5_description = We feel the need for speed, and five times the speed of sound, well, sounds catchy.
+		#autoLOC_KPlanes_Modern_003_Mach5_synopsis = Launch an airplane from the runway, fly at an @/PrettyAltRange, exceed @/PrettySpeed in level flight for 5 seconds, and then land and stop anywhere safely.
+		#autoLOC_KPlanes_Modern_003_Mach5_notes = Higher speeds means more powerful engines. Rockets are allowed, but watch out even that high up the air might burn you into a fireball.
+		#autoLOC_KPlanes_Modern_003_Mach5_completedMessage = "Five! Ahahahahah!" cackled Gene Kerman as thunder and lightning flashed around him. Seems like he's getting a little obsessed by speed.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Modern_005_MesosphereJet_title = Get a plane high up to @/PrettyAltMin@/DescAltMin, without using rockets.
+		#autoLOC_KPlanes_Modern_005_MesosphereJet_description = We think using rockets to get up so high is a bit like cheating, plus it uses a lot of mass we might not need. Try getting to an @/PrettyAltMin without using rockets or SRBs.
+		#autoLOC_KPlanes_Modern_005_MesosphereJet_synopsis = Launch a jet plane from the runway and fly to an @/PrettyAltRange and then land your plane anywhere on the ground safely.
+		#autoLOC_KPlanes_Modern_005_MesosphereJet_notes =  You may only use an air-breathing engine, but check out the R&D lab for higher tech solutions like Ram Jets or Scram Jets.
+		#autoLOC_KPlanes_Modern_005_MesosphereJet_completedMessage = Marvellous. This means we might be able to use less fuel to build future space planes. Either that or people can get to their holiday destinations quicker and with prettier views.
+
+		// --------------------------------------------------------------------------------
+		#autoLOC_KPlanes_Modern_006_Mach10_title = Ludicrous Speed! Achieve an airspeed of @/PrettySpeed.
+		#autoLOC_KPlanes_Modern_006_Mach10_description = Double digit mach speeds should be possible if the plane is made entirely of engines. Rockets are allowed, but you should still have wings and stay in the atmosphere. You may have to coat the plane in specialized material to stop you turning into toast. Actually toast seems to be a good material to cover the plane with. Genius.
+		#autoLOC_KPlanes_Modern_006_Mach10_synopsis = Launch an airplane from the runway, fly at an @/PrettyAltRange, exceed @/PrettySpeed in level flight for 5 seconds, and then land and stop anywhere safely.
+		#autoLOC_KPlanes_Modern_006_Mach10_notes = Controlling heating will be critical to your surival. Perhaps using a crash dummy, robot or simulator first to make sure you can survive?
+		#autoLOC_KPlanes_Modern_006_Mach10_completedMessage = "I'm a shooting star leaping through the sky like a panther" sings Gene Kerman to a tune that seems familiar. The words don't quite seem right though, no matter, everybody is very excited by you nearly turning into cripsy toast.
 	}
 }
